# blindllama-v2

./: .earthlyignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Earthfile  README.md  appdisk.Dockerfile  boot.sh  build_app_disk_blindllama.sh  build_app_disk_blindllama_ci.sh  build_libnvinfer_plugin_tensorrt_llm.sh  build_os_disk_ci.sh  build_slsa.sh  cloudbuild.appdisk.yaml  cloudbuild.gitlfs.yaml  cloudbuild.libnvinfer_plugin_tensorrt_llm.yaml  cloudbuild.mithrilos.yaml  cloudbuild.yaml  export_docker_image_as_tar.sh  export_docker_image_as_targz.sh  gitlfs.Dokerfile  launch_container_create_model_engine.sh  lfs_update.sh  mithrilos.Dockerfile  run_test_qemu_helloworld.sh  sample_vtpm.crt  setup-tpm.sh  update_hosts_entry.sh  update_systemd.sh  upload.sh  upload_config.sh  user-data.txt
.devcontainer/: devcontainer.json  script.sh
application_disk/: 10-app.conf  11-app-verity.conf
client/client/: README.md  pyproject.toml  sample.py
client/client/blindllamav2/: __init__.py  _config.py  attestation_validator.py  completion.py  errors.py  utils.py
client/client/blindllamav2/attestation/: Azure Virtual TPM Root Certificate Authority 2023.crt  __init__.py  attestation_retriever.py  attested_session.py  quote.py  test_azure_ak_certificate.py  tpm.py  verifier.py
client/client/blindllamav2/security_config/: __init__.py
client/client/fluorite/: _config.py  attestation_validator.py  completion.py  errors.py  logging.py
client/client/fluorite/attestation/: attested_session.py  azure_ak_certificate.py  errors.py  quote.py  test_azure_ak_certificate.py
client/client/tests/integration/: test_e2e_helloworld.py
client/client/tests/unit/: measurements_azure.json  sample_azure_attestation.json  snakeoil_ca.crt  test_attestation_azure.py  test_qemu_quote.py
mithril-os/: config.debug.yaml  config.yaml
mithril-os/render_template/: pyproject.toml
mithril-os/render_template/render_template/: __main__.py
scripts/: compute_expected_pcr4.py  generate_expected_measurements_files.py  generate_security_config.py
server/attestation_generator/: Dockerfile  pyproject.toml
server/attestation_generator/attestation_generator/: generate_attestation_document.py  intermediate_ca.crt
tritonRT/: create_engine.sh  create_tensorrt_py_package.sh  launch_script.sh  modify_configpb.sh  modify_configpb.sh.j2
(+30 files in other folders)
